--- a/config/locales/fra/help/accountancy-accounts.txt
+++ b/config/locales/fra/help/accountancy-accounts.txt
@@ -4,7 +4,7 @@
 Il s'agit d'un compte dans lequel sont enregistrés les évènements économiques et financiers de l'entreprise. Un compte comptable est défini par un numéro et un intitulé en conformité avec le plan comptable général.
 
 ===== Gestion des comptes  =====
-Le plan de compte est extensible à volonté, vous pouvez [[>accountancy/account_create|rajouter]] autant de comptes que nécessaire. Par la suite, il vous sera possible de les [[accountancy-accounts_update|modifier {{theme:buttons/update.png}}]] ou même de les supprimer {{theme:buttons/delete.png|supprimer}} à condition qu'il n'existe aucune écriture relative à ce compte.
+Le plan de compte est extensible à volonté, vous pouvez [[>accountancy/account_create|rajouter]] autant de comptes que nécessaire. Par la suite, il vous sera possible de les modifier {{theme:buttons/update.png}} ou même de les supprimer {{theme:buttons/delete.png}} à condition qu'il n'existe aucune écriture relative à ce compte.
 
 >>> Il est possible de créer des comptes en alpha-numérique à partir du 4ème caractère. 
 >>> Exemple~: 411MARTIN
