Prepare last finition for I18n
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1600 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/arb/countries.yml
+++ b/config/locales/arb/countries.yml
@@ -1,248 +1,248 @@
 arb:
   countries:
-    #>ad: 'Andorre'
-    #>ae: 'Émirats Arabes Unis'
+    #>ad: 'Andorra'
+    #>ae: 'United Arab Emirates'
     #>af: 'Afghanistan'
-    #>ag: 'Antigua-Et-Barbuda'
+    #>ag: 'Antigua and Barbuda'
     #>ai: 'Anguilla'
-    #>al: 'Albanie'
-    #>am: 'Arménie'
-    #>an: 'Antilles Néerlandaises'
+    #>al: 'Albania'
+    #>am: 'Armenia'
+    #>an: 'Netherlands Antilles'
     #>ao: 'Angola'
-    #>aq: 'Antarctique'
-    #>ar: 'Argentine'
-    #>as: 'Samoa Américaines'
-    #>at: 'Autriche'
-    #>au: 'Australie'
+    #>aq: 'Antarctica'
+    #>ar: 'Argentina'
+    #>as: 'American Samoa'
+    #>at: 'Austria'
+    #>au: 'Australia'
     #>aw: 'Aruba'
-    #>ax: 'Åland, Îles'
-    #>az: 'Azerbaïdjan'
-    #>ba: 'Bosnie-Herzégovine'
-    #>bb: 'Barbade'
+    #>ax: 'Åland Islands'
+    #>az: 'Azerbaijan'
+    #>ba: 'Bosnia and Herzegovina'
+    #>bb: 'Barbados'
     #>bd: 'Bangladesh'
-    #>be: 'Belgique'
+    #>be: 'Belgium'
     #>bf: 'Burkina Faso'
-    #>bg: 'Bulgarie'
-    #>bh: 'Bahreïn'
+    #>bg: 'Bulgaria'
+    #>bh: 'Bahrain'
     #>bi: 'Burundi'
-    #>bj: 'Bénin'
-    #>bl: 'Saint-Barthélemy'
-    #>bm: 'Bermudes'
-    #>bn: 'Brunéi Darussalam'
-    #>bo: 'Bolivie'
-    #>br: 'Brésil'
+    #>bj: 'Benin'
+    #>bl: 'Saint Barthélemy'
+    #>bm: 'Bermuda'
+    #>bn: 'Brunei Darussalam'
+    #>bo: 'Bolivia, Plurinational State of'
+    #>br: 'Brazil'
     #>bs: 'Bahamas'
-    #>bt: 'Bhoutan'
-    #>bv: 'Bouvet, Île'
+    #>bt: 'Bhutan'
+    #>bv: 'Bouvet Island'
     #>bw: 'Botswana'
-    #>by: 'Bélarus'
+    #>by: 'Belarus'
     #>bz: 'Belize'
     #>ca: 'Canada'
-    #>cc: 'Cocos (Keeling), Îles'
-    #>cd: 'Congo, La République Démocratique Du'
-    #>cf: 'Centrafricaine, République'
+    #>cc: 'Cocos (Keeling) Islands'
+    #>cd: 'Congo, the Democratic Republic of the'
+    #>cf: 'Central African Republic'
     #>cg: 'Congo'
-    #>ch: 'Suisse'
-    #>ci: 'Côte D''Ivoire'
-    #>ck: 'Cook, Îles'
-    #>cl: 'Chili'
-    #>cm: 'Cameroun'
-    #>cn: 'Chine'
-    #>co: 'Colombie'
+    #>ch: 'Switzerland'
+    #>ci: 'Côte d''Ivoire'
+    #>ck: 'Cook Islands'
+    #>cl: 'Chile'
+    #>cm: 'Cameroon'
+    #>cn: 'China'
+    #>co: 'Colombia'
     #>cr: 'Costa Rica'
     #>cu: 'Cuba'
-    #>cv: 'Cap-Vert'
-    #>cx: 'Christmas, Île'
-    #>cy: 'Chypre'
-    #>cz: 'Tchèque, République'
-    #>de: 'Allemagne'
+    #>cv: 'Cape Verde'
+    #>cx: 'Christmas Island'
+    #>cy: 'Cyprus'
+    #>cz: 'Czech Republic'
+    #>de: 'Germany'
     #>dj: 'Djibouti'
-    #>dk: 'Danemark'
-    #>dm: 'Dominique'
-    #>do: 'Dominicaine, République'
-    #>dz: 'Algérie'
-    #>ec: 'Équateur'
-    #>ee: 'Estonie'
-    #>eg: 'Égypte'
-    #>eh: 'Sahara Occidental'
-    #>er: 'Érythrée'
-    #>es: 'Espagne'
-    #>et: 'Éthiopie'
-    #>fi: 'Finlande'
-    #>fj: 'Fidji'
-    #>fk: 'Falkland, Îles (Malvinas)'
-    #>fm: 'Micronésie, États Fédérés De'
-    #>fo: 'Féroé, Îles'
+    #>dk: 'Denmark'
+    #>dm: 'Dominica'
+    #>do: 'Dominican Republic'
+    #>dz: 'Algeria'
+    #>ec: 'Ecuador'
+    #>ee: 'Estonia'
+    #>eg: 'Egypt'
+    #>eh: 'Western Sahara'
+    #>er: 'Eritrea'
+    #>es: 'Spain'
+    #>et: 'Ethiopia'
+    #>fi: 'Finland'
+    #>fj: 'Fiji'
+    #>fk: 'Falkland Islands (Malvinas)'
+    #>fm: 'Micronesia, Federated States of'
+    #>fo: 'Faroe Islands'
     #>fr: 'France'
     #>ga: 'Gabon'
-    #>gb: 'Royaume-Uni'
-    #>gd: 'Grenade'
-    #>ge: 'Géorgie'
-    #>gf: 'Guyane Française'
-    #>gg: 'Guernesey'
+    #>gb: 'United Kingdom'
+    #>gd: 'Grenada'
+    #>ge: 'Georgia'
+    #>gf: 'French Guiana'
+    #>gg: 'Guernsey'
     #>gh: 'Ghana'
     #>gi: 'Gibraltar'
-    #>gl: 'Groenland'
-    #>gm: 'Gambie'
-    #>gn: 'Guinée'
+    #>gl: 'Greenland'
+    #>gm: 'Gambia'
+    #>gn: 'Guinea'
     #>gp: 'Guadeloupe'
-    #>gq: 'Guinée Équatoriale'
-    #>gr: 'Grèce'
-    #>gs: 'Géorgie Du Sud Et Les Îles Sandwich Du Sud'
+    #>gq: 'Equatorial Guinea'
+    #>gr: 'Greece'
+    #>gs: 'South Georgia and the South Sandwich Islands'
     #>gt: 'Guatemala'
     #>gu: 'Guam'
-    #>gw: 'Guinée-Bissau'
+    #>gw: 'Guinea-Bissau'
     #>gy: 'Guyana'
-    #>hk: 'Hong-Kong'
-    #>hm: 'Heard, Île Et Mcdonald, Îles'
+    #>hk: 'Hong Kong'
+    #>hm: 'Heard Island and McDonald Islands'
     #>hn: 'Honduras'
-    #>hr: 'Croatie'
-    #>ht: 'Haïti'
-    #>hu: 'Hongrie'
-    #>id: 'Indonésie'
-    #>ie: 'Irlande'
-    #>il: 'Israël'
-    #>im: 'Île De Man'
-    #>in: 'Inde'
-    #>io: 'Océan Indien, Territoire Britannique De L'''
+    #>hr: 'Croatia'
+    #>ht: 'Haiti'
+    #>hu: 'Hungary'
+    #>id: 'Indonesia'
+    #>ie: 'Ireland'
+    #>il: 'Israel'
+    #>im: 'Isle of Man'
+    #>in: 'India'
+    #>io: 'British Indian Ocean Territory'
     #>iq: 'Iraq'
-    #>ir: 'Iran, République Islamique D'''
-    #>is: 'Islande'
-    #>it: 'Italie'
+    #>ir: 'Iran, Islamic Republic of'
+    #>is: 'Iceland'
+    #>it: 'Italy'
     #>je: 'Jersey'
-    #>jm: 'Jamaïque'
-    #>jo: 'Jordanie'
-    #>jp: 'Japon'
+    #>jm: 'Jamaica'
+    #>jo: 'Jordan'
+    #>jp: 'Japan'
     #>ke: 'Kenya'
-    #>kg: 'Kirghizistan'
-    #>kh: 'Cambodge'
+    #>kg: 'Kyrgyzstan'
+    #>kh: 'Cambodia'
     #>ki: 'Kiribati'
-    #>km: 'Comores'
-    #>kn: 'Saint-Kitts-Et-Nevis'
-    #>kp: 'Corée, République Populaire Démocratique De'
-    #>kr: 'Corée, République De'
-    #>kw: 'Koweït'
-    #>ky: 'Caïmanes, Îles'
+    #>km: 'Comoros'
+    #>kn: 'Saint Kitts and Nevis'
+    #>kp: 'Korea, Democratic People''s Republic of'
+    #>kr: 'Korea, Republic of'
+    #>kw: 'Kuwait'
+    #>ky: 'Cayman Islands'
     #>kz: 'Kazakhstan'
-    #>la: 'Lao, République Démocratique Populaire'
-    #>lb: 'Liban'
-    #>lc: 'Sainte-Lucie'
+    #>la: 'Lao People''s Democratic Republic'
+    #>lb: 'Lebanon'
+    #>lc: 'Saint Lucia'
     #>li: 'Liechtenstein'
     #>lk: 'Sri Lanka'
-    #>lr: 'Libéria'
+    #>lr: 'Liberia'
     #>ls: 'Lesotho'
-    #>lt: 'Lituanie'
+    #>lt: 'Lithuania'
     #>lu: 'Luxembourg'
-    #>lv: 'Lettonie'
-    #>ly: 'Libyenne, Jamahiriya Arabe'
-    #>ma: 'Maroc'
+    #>lv: 'Latvia'
+    #>ly: 'Libyan Arab Jamahiriya'
+    #>ma: 'Morocco'
     #>mc: 'Monaco'
-    #>md: 'Moldova, République De'
-    #>me: 'Monténégro'
-    #>mf: 'Saint-Martin'
+    #>md: 'Moldova, Republic of'
+    #>me: 'Montenegro'
+    #>mf: 'Saint Martin (French part)'
     #>mg: 'Madagascar'
-    #>mh: 'Marshall, Îles'
-    #>mk: 'Macédoine, L''Ex-République Yougoslave De'
+    #>mh: 'Marshall Islands'
+    #>mk: 'Macedonia, the former Yugoslav Republic of'
     #>ml: 'Mali'
     #>mm: 'Myanmar'
-    #>mn: 'Mongolie'
+    #>mn: 'Mongolia'
     #>mo: 'Macao'
-    #>mp: 'Mariannes Du Nord, Îles'
+    #>mp: 'Northern Mariana Islands'
     #>mq: 'Martinique'
-    #>mr: 'Mauritanie'
+    #>mr: 'Mauritania'
     #>ms: 'Montserrat'
-    #>mt: 'Malte'
-    #>mu: 'Maurice'
+    #>mt: 'Malta'
+    #>mu: 'Mauritius'
     #>mv: 'Maldives'
     #>mw: 'Malawi'
-    #>mx: 'Mexique'
-    #>my: 'Malaisie'
+    #>mx: 'Mexico'
+    #>my: 'Malaysia'
     #>mz: 'Mozambique'
-    #>na: 'Namibie'
-    #>nc: 'Nouvelle-Calédonie'
+    #>na: 'Namibia'
+    #>nc: 'New Caledonia'
     #>ne: 'Niger'
-    #>nf: 'Norfolk, Île'
-    #>ng: 'Nigéria'
+    #>nf: 'Norfolk Island'
+    #>ng: 'Nigeria'
     #>ni: 'Nicaragua'
-    #>nl: 'Pays-Bas'
-    #>no: 'Norvège'
-    #>np: 'Népal'
+    #>nl: 'Netherlands'
+    #>no: 'Norway'
+    #>np: 'Nepal'
     #>nr: 'Nauru'
-    #>nu: 'Niué'
-    #>nz: 'Nouvelle-Zélande'
+    #>nu: 'Niue'
+    #>nz: 'New Zealand'
     #>om: 'Oman'
     #>pa: 'Panama'
-    #>pe: 'Pérou'
-    #>pf: 'Polynésie Française'
-    #>pg: 'Papouasie-Nouvelle-Guinée'
+    #>pe: 'Peru'
+    #>pf: 'French Polynesia'
+    #>pg: 'Papua New Guinea'
     #>ph: 'Philippines'
     #>pk: 'Pakistan'
-    #>pl: 'Pologne'
-    #>pm: 'Saint-Pierre-Et-Miquelon'
+    #>pl: 'Poland'
+    #>pm: 'Saint Pierre and Miquelon'
     #>pn: 'Pitcairn'
-    #>pr: 'Porto Rico'
-    #>ps: 'Palestinien Occupé, Territoire'
+    #>pr: 'Puerto Rico'
+    #>ps: 'Palestinian Territory, Occupied'
     #>pt: 'Portugal'
-    #>pw: 'Palaos'
+    #>pw: 'Palau'
     #>py: 'Paraguay'
     #>qa: 'Qatar'
     #>re: 'Réunion'
-    #>ro: 'Roumanie'
-    #>rs: 'Serbie'
-    #>ru: 'Russie, Fédération De'
+    #>ro: 'Romania'
+    #>rs: 'Serbia'
+    #>ru: 'Russian Federation'
     #>rw: 'Rwanda'
-    #>sa: 'Arabie Saoudite'
-    #>sb: 'Salomon, Îles'
+    #>sa: 'Saudi Arabia'
+    #>sb: 'Solomon Islands'
     #>sc: 'Seychelles'
-    #>sd: 'Soudan'
-    #>se: 'Suède'
-    #>sg: 'Singapour'
-    #>sh: 'Sainte-Hélène'
-    #>si: 'Slovénie'
-    #>sj: 'Svalbard Et Île Jan Mayen'
-    #>sk: 'Slovaquie'
+    #>sd: 'Sudan'
+    #>se: 'Sweden'
+    #>sg: 'Singapore'
+    #>sh: 'Saint Helena, Ascension and Tristan da Cunha'
+    #>si: 'Slovenia'
+    #>sj: 'Svalbard and Jan Mayen'
+    #>sk: 'Slovakia'
     #>sl: 'Sierra Leone'
-    #>sm: 'Saint-Marin'
-    #>sn: 'Sénégal'
-    #>so: 'Somalie'
+    #>sm: 'San Marino'
+    #>sn: 'Senegal'
+    #>so: 'Somalia'
     #>sr: 'Suriname'
-    #>st: 'Sao Tomé-Et-Principe'
+    #>st: 'Sao Tome and Principe'
     #>sv: 'El Salvador'
-    #>sy: 'Syrienne, République Arabe'
+    #>sy: 'Syrian Arab Republic'
     #>sz: 'Swaziland'
-    #>tc: 'Turks Et Caïques, Îles'
-    #>td: 'Tchad'
-    #>tf: 'Terres Australes Françaises'
+    #>tc: 'Turks and Caicos Islands'
+    #>td: 'Chad'
+    #>tf: 'French Southern Territories'
     #>tg: 'Togo'
-    #>th: 'Thaïlande'
-    #>tj: 'Tadjikistan'
+    #>th: 'Thailand'
+    #>tj: 'Tajikistan'
     #>tk: 'Tokelau'
     #>tl: 'Timor-Leste'
-    #>tm: 'Turkménistan'
-    #>tn: 'Tunisie'
+    #>tm: 'Turkmenistan'
+    #>tn: 'Tunisia'
     #>to: 'Tonga'
-    #>tr: 'Turquie'
-    #>tt: 'Trinité-Et-Tobago'
+    #>tr: 'Turkey'
+    #>tt: 'Trinidad and Tobago'
     #>tv: 'Tuvalu'
-    #>tw: 'Taïwan, Province De Chine'
-    #>tz: 'Tanzanie, République-Unie De'
+    #>tw: 'Taiwan, Province of China'
+    #>tz: 'Tanzania, United Republic of'
     #>ua: 'Ukraine'
-    #>ug: 'Ouganda'
-    #>um: 'Îles Mineures Éloignées Des États-Unis'
-    #>us: 'États-Unis'
+    #>ug: 'Uganda'
+    #>um: 'United States Minor Outlying Islands'
+    #>us: 'United States'
     #>uy: 'Uruguay'
-    #>uz: 'Ouzbékistan'
-    #>va: 'Saint-Siège (État De La Cité Du Vatican)'
-    #>vc: 'Saint-Vincent-Et-Les Grenadines'
-    #>ve: 'Venezuela'
-    #>vg: 'Îles Vierges Britanniques'
-    #>vi: 'Îles Vierges Des États-Unis'
+    #>uz: 'Uzbekistan'
+    #>va: 'Holy See (Vatican City State)'
+    #>vc: 'Saint Vincent and the Grenadines'
+    #>ve: 'Venezuela, Bolivarian Republic of'
+    #>vg: 'Virgin Islands, British'
+    #>vi: 'Virgin Islands, U.S.'
     #>vn: 'Viet Nam'
     #>vu: 'Vanuatu'
-    #>wf: 'Wallis Et Futuna'
+    #>wf: 'Wallis and Futuna'
     #>ws: 'Samoa'
-    #>ye: 'Yémen'
+    #>ye: 'Yemen'
     #>yt: 'Mayotte'
-    #>za: 'Afrique Du Sud'
-    #>zm: 'Zambie'
+    #>za: 'South Africa'
+    #>zm: 'Zambia'
     #>zw: 'Zimbabwe'
