--- a/config/locales/arb/rights.yml
+++ b/config/locales/arb/rights.yml
@@ -1,68 +1,68 @@
 arb:
   rights:
-    #>accountize: 'Basculer les opérations commerciales en comptabilité'
-    #>backup_company: 'Effectuer/Recharger des sauvegardes'
-    #>cancel_invoices: 'Faire des avoirs'
-    #>change_prices_on_sale: 'Changer les prix au moment des ventes'
-    #>close_journals: 'Clôturer et déclôturer des journaux'
-    #>configure_company: 'Configurer les options de la société'
-    #>consult_accounting_documents: 'Consulter les documents comptables'
-    #>consult_entities: 'Consulter les fiches clients/fournisseurs'
-    #>consult_entries: 'Consulter les écritures'
-    #>consult_invoices: 'Consulter les factures'
-    #>consult_prices: 'Consulter les prix'
-    #>consult_products: 'Consulter les produits'
-    #>consult_purchases: 'Consulter les achats'
-    #>consult_sale_orders: 'Consulter les ventes'
-    #>consult_stocks: 'Consulter l''état des stocks'
-    #>consult_tracking: 'Consulter les informations de tracabilité'
-    #>extract_listings: 'Effectuer des extractions (sans pouvoir les concevoir)'
-    #>give_discounts_on_sale: 'Octroyer des réductions commerciales lors des ventes'
-    #>import_data: 'Importer des données d''autres logiciels'
-    #>import_export_entities: 'Importer, exporter des fiches clients/fournisseurs'
-    #>mail_to_listings: 'Gérer l''envoi de courriels par les extractions'
-    #>manage_accounts: 'Gérer les comptes comptables'
-    #>manage_areas: 'Gérer les zones'
-    #>manage_bank_statements: 'Pointage des relevés de comptes'
-    #>manage_cashes: 'Gérer les comptes de trésorerie'
-    #>manage_complements: 'Gérer les champs personnalisés'
-    #>manage_delays: 'Gérer les délais'
-    #>manage_delivery_modes: 'Gérer les types de livraison'
-    #>manage_districts: 'Gérer les districts'
-    #>manage_document_templates: 'Gérer les modèles de document'
-    #>manage_embankments: 'Gérer les remises en banque'
-    #>manage_entities: 'Gérer les fiches clients/fournisseurs'
-    #>manage_entities_natures: 'Gérer les types de fiche'
-    #>manage_entity_categories: 'Gérer les catégories de fiche'
-    #>manage_entity_links: 'Gérer les liens entre fiches'
-    #>manage_entries: 'Gérer les écritures'
-    #>manage_estimates: 'Créer, modifier des devis'
-    #>manage_events: 'Gérer les évènements'
-    #>manage_financialyears: 'Gérer, clôturer les exercices'
-    #>manage_inventories: 'Gérer les inventaires'
-    #>manage_journals: 'Gérer, clôturer, déclôturer les journaux'
-    #>manage_listings: 'Gérer les extractions'
-    #>manage_locations: 'Gérer les lieux de stockage'
-    #>manage_mandates: 'Gérer les responsabilités'
-    #>manage_observations: 'Gérer les observations'
-    #>manage_operations: 'Gérer les travaux'
-    #>manage_payment_modes: 'Gérer les modes de paiments'
-    #>manage_prices: 'Gérer les prix'
-    #>manage_products: 'Gérer les produits'
-    #>manage_purchases: 'Gérer les achats'
-    #>manage_sale_order_natures: 'Gérer les types de vente'
-    #>manage_sale_orders: 'Gérer les ventes (devis, commandes et livraisons)'
-    #>manage_sale_payments: 'Gérer les règlements de vente'
-    #>manage_shapes: 'Gérer les îlots'
-    #>manage_shelves: 'Gérer les catégories de produits'
-    #>manage_stock_moves: 'Gérer les mouvements de stocks'
-    #>manage_subscriptions: 'Gérer les abonnements'
-    #>manage_taxes: 'Gérer les taxes'
-    #>manage_tools: 'Gérer les outils de production'
-    #>manage_transports: 'Gérer les transports'
-    #>manage_units: 'Gérer les unités de mesure'
-    #>manage_users: 'Gérer les utilisateurs'
-    #>merge_entities: 'Fusionner les fiches clients/fournisseurs'
-    #>__minimum__: 'Accéder au minimum vital'
-    #>__not_used__: 'Droit par défaut (inaccessible)'
-    #>print: 'Imprimer'
+    #>accountize: 'Transfer commercial data in accountancy'
+    #>backup_company: 'Make and reload backups'
+    #>cancel_invoices: 'Cancel invoices'
+    #>change_prices_on_sale: 'Change prices on sales'
+    #>close_journals: 'Close and reopen journals'
+    #>configure_company: 'Configure the options of the company'
+    #>consult_accounting_documents: 'Consult accounting documents'
+    #>consult_entities: 'Consult the people'
+    #>consult_entries: 'Consult the journal entries'
+    #>consult_invoices: 'Consult the invoices'
+    #>consult_prices: 'Consult the prices'
+    #>consult_products: 'Consult the products'
+    #>consult_purchases: 'Consult the purchases'
+    #>consult_sale_orders: 'Consult the sales'
+    #>consult_stocks: 'Consult the stocks'
+    #>consult_tracking: 'Consult the tracking informations'
+    #>extract_listings: 'Export listings'
+    #>give_discounts_on_sale: 'Set reduction on sales'
+    #>import_data: 'Import data from other software'
+    #>import_export_entities: 'Import, export people listings'
+    #>mail_to_listings: 'Send mail to lists'
+    #>manage_accounts: 'Manage accounts'
+    #>manage_areas: 'Manage areas'
+    #>manage_bank_statements: 'Point bank statements'
+    #>manage_cashes: 'Manage cashes'
+    #>manage_complements: 'Manage personalized fields'
+    #>manage_delays: 'Manage delays'
+    #>manage_delivery_modes: 'Manage delivery modes'
+    #>manage_districts: 'Manage districts'
+    #>manage_document_templates: 'Manage document templates'
+    #>manage_embankments: 'Manage embankments'
+    #>manage_entities: 'Manage people'
+    #>manage_entities_natures: 'Manage people natures'
+    #>manage_entity_categories: 'Manage people categories'
+    #>manage_entity_links: 'Manage people links'
+    #>manage_entries: 'Manage journal entries'
+    #>manage_estimates: 'Create and update estimates'
+    #>manage_events: 'Manage events'
+    #>manage_financialyears: 'Manage and close financial years'
+    #>manage_inventories: 'Manage inventories'
+    #>manage_journals: 'Manage, close and reopen journals'
+    #>manage_listings: 'Manage listings'
+    #>manage_locations: 'Manage warehouse'
+    #>manage_mandates: 'Manage mandates'
+    #>manage_observations: 'Manage observations'
+    #>manage_operations: 'Manage tasks'
+    #>manage_payment_modes: 'Manage payment modes'
+    #>manage_prices: 'Manage prices'
+    #>manage_products: 'Manage products'
+    #>manage_purchases: 'Manage purchase orders'
+    #>manage_sale_order_natures: 'Mange sale orders natures'
+    #>manage_sale_orders: 'Manages sale orders'
+    #>manage_sale_payments: 'Manage sale payments'
+    #>manage_shapes: 'Manage fields'
+    #>manage_shelves: 'Manage shelves'
+    #>manage_stock_moves: 'Manage stock moves'
+    #>manage_subscriptions: 'Manage subscriptions'
+    #>manage_taxes: 'Manage taxes'
+    #>manage_tools: 'Maange tools of production'
+    #>manage_transports: 'Manage transports'
+    #>manage_units: 'Manage units of measure'
+    #>manage_users: 'Manage users'
+    #>merge_entities: 'Merge people'
+    #>__minimum__: 'Access to the minimum'
+    #>__not_used__: 'Inaccessible'
+    #>print: 'Print'
