--- a/config/locales/arb/support.yml
+++ b/config/locales/arb/support.yml
@@ -5,60 +5,60 @@ arb:
     iso2: 'ar'
     name: 'لعربية'
   date:
-    #>abbr_day_names: ['Dim', 'Lun', 'Mar', 'Mer', 'Jeu', 'Ven', 'Sam']
-    #>abbr_month_names: ['', 'janv', 'févr', 'mars', 'avr', 'mai', 'juin', 'juil', 'août', 'sept', 'oct', 'nov', 'déc']
-    #>day_names: ['Dimanche', 'Lundi', 'Mardi', 'Mercredi', 'Jeudi', 'Vendredi', 'Samedi']
+    #>abbr_day_names: ['Sun', 'Mon', 'Tue', 'Wed', 'Thu', 'Fri', 'Sat']
+    #>abbr_month_names: ['', 'jan', 'feb', 'mar', 'apr', 'may', 'jun', 'jul', 'aug', 'sep', 'oct', 'nov', 'dec']
+    #>day_names: ['Sunday', 'Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday', 'Saturday']
     formats:
-      #>default: '%d/%m/%Y'
+      #>default: '%m/%d/%Y'
       #>legal: '%d %B %Y'
       #>long: '%B %d, %Y'
       #>month_letter: '%d %B %Y'
       #>short: '%b %d'
-    #>month_names: ['', 'janvier', 'février', 'mars', 'avril', 'mai', 'juin', 'juillet', 'août', 'septembre', 'octobre', 'novembre', 'décembre']
-    #>order: [:day, :month, :year]
+    #>month_names: ['', 'january', 'february', 'march', 'april', 'may', 'june', 'july', 'august', 'september', 'october', 'november', 'december']
+    #>order: [:month, :day, :year]
   datetime:
     distance_in_words:
       about_x_hours:
-        #>many: 'about %{count} hours'
+        #>many: 'about {{count}} hours'
         #>one: 'about 1 hour'
       about_x_months:
-        #>many: 'about %{count} months'
+        #>many: 'about {{count}} months'
         #>one: 'about 1 month'
       about_x_years:
-        #>many: 'about %{count} years'
+        #>many: 'about {{count}} years'
         #>one: 'about 1 year'
       #>half_a_minute: 'half a minute'
       less_than_x_minutes:
-        #>many: 'less than %{count} minutes'
+        #>many: 'less than {{count}} minutes'
         #>one: 'less than a minute'
       less_than_x_seconds:
-        #>many: 'moins de %{count} secondes'
+        #>many: 'moins de {{count}} secondes'
         #>one: 'moins d''une seconde'
       over_x_years:
-        #>many: 'over %{count} years'
+        #>many: 'over {{count}} years'
         #>one: 'over 1 year'
       x_days:
-        #>many: '%{count} days'
+        #>many: '{{count}} days'
         #>one: '1 day'
       x_minutes:
-        #>many: '%{count} minutes'
+        #>many: '{{count}} minutes'
         #>one: '1 minute'
       x_months:
-        #>many: '%{count} months'
+        #>many: '{{count}} months'
         #>one: '1 month'
       x_seconds:
-        #>many: '%{count} secondes'
+        #>many: '{{count}} secondes'
         #>one: '1 seconde'
   dyta:
     export:
       #>csv: 'CSV'
-      #>false_value: 'FAUX'
+      #>false_value: 'FALSE'
       #>title: 'Export'
-      #>true_value: 'VRAI'
-      #>xcsv: 'CSV pour Excel'
-    #>next: 'Suivant'
-    #>no_records: 'Aucun enregistrement'
-    #>previous: 'Précédent'
+      #>true_value: 'TRUE'
+      #>xcsv: 'Excel CSV'
+    #>next: 'Next'
+    #>no_records: 'No records'
+    #>previous: 'Previous'
   number:
     currency:
       format:
@@ -83,14 +83,14 @@ arb:
         #>delimiter: ''
   support:
     array:
-      #>last_word_connector: ' et '
-      #>sentence_connector: 'et'
+      #>last_word_connector: ' and '
+      #>sentence_connector: 'and'
       #>two_words_connector: ', '
       #>words_connector: ', '
   time:
     #>am: 'am'
     formats:
-      #>default: '%d %b. %Y à %H:%M:%S'
+      #>default: '%b. %d, %Y at %H:%M:%S'
       #>long: '%B %d, %Y %H:%M'
       #>short: '%d %b %H:%M'
     #>pm: 'pm'
